# syunjyu

./: .editorconfig  .env.example  .gitignore  CHECKLIST.md  DEVELOPMENT.md  FILE_TREE.txt  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UI_IMPROVEMENTS.md  package-lock.json  package.json  test_clean_html.py
.github/workflows/: release.yml
ghost-theme-letters/: README.md  author.hbs  default.hbs  error.hbs  index.hbs  package.json  page.hbs  post.hbs  tag.hbs
ghost-theme-letters/assets/css/: style.css
ghost-theme-letters/assets/js/: main.js
ghost-theme-letters/partials/: footer.hbs  header.hbs  navigation.hbs
ios/SyunjyunAgent/: Package.swift
ios/SyunjyunAgent/.build/: plugin-tools.yaml
ios/SyunjyunAgent/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
ios/SyunjyunAgent/Sources/SyunjyunAgentUI/: SyunjyunAgentApp.swift
ios/SyunjyunAgent/Sources/SyunjyunAgentUI/Design/: AgentTheme.swift
ios/SyunjyunAgent/Sources/SyunjyunAgentUI/Models/: NewsModels.swift  NewsSource.swift  SourceRepository.swift  UserPreferences.swift
ios/SyunjyunAgent/Sources/SyunjyunAgentUI/Scenes/: ContentView.swift  LearningLibraryView.swift  NewsDetailView.swift  NewsListView.swift  SettingsView.swift  SourceManagementView.swift
ios/SyunjyunAgent/Sources/SyunjyunAgentUI/Services/: APIService.swift
ios/SyunjyunAgent/Sources/SyunjyunAgentUI/ViewModels/: ArticleDetailViewModel.swift  NewsViewModel.swift  SourceManagementViewModel.swift  SourcePreferenceStore.swift  TaylorSwiftDesignViewModel.swift
ios/SyunjyunAgent/Tests/SyunjyunAgentUITests/: SourceManagementViewModelTests.swift
python-backend/: .env.example  .env.local  ai_filter.py  app.py  app_patch.py  article_analyzer.py  check_db.py  concept_extractor.py  config.py  db.py  debug_meta.py  debug_openai.py  debug_rss.py  debug_trafilatura.py  fix_news_item.py  model_local.py  model_remote.py  news_fetcher.py  pdf_exporter.py  requirements.txt  sync_client.py  temp_delete_endpoint.py  test_table_extraction.py  tts_service.py  user_level.py  vocabulary_filter.py
scripts/: README.md  check-sources.py  dev-backend.sh  dev-sync-server.sh  fix_existing_news.py  process_icon.py  reinit-sources.py  setup.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
sync-server/: db.py  requirements.txt  server.py
web/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/account/: page.tsx
web/src/app/concepts/: page.tsx
web/src/app/phrases/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/sources/: page.tsx
web/src/components/: AuthenticatedLayout.tsx  ConfirmModal.tsx  LoginScreen.tsx  NewsCard.tsx  QuizView.tsx  Sidebar.tsx  TaylorSpotlight.tsx  Toast.tsx
web/src/lib/: api.ts  auth.tsx  config.ts  newsCategories.ts  preferences.tsx  sourceCategories.ts  tauri.ts  updater.ts
(+201 files in other folders)
