[package]
name = "ai-daily"
version = "0.1.0"
description = "AI Daily - Desktop app for AI news aggregation and learning"
authors = ["AI Daily Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open", "process-all", "notification-all", "os-all", "path-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }

# Unix-specific dependencies for graceful process termination
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Optimize for size and performance
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
