[package]
name = "ai-daily"
version = "0.2.0"
description = "AI Daily - Desktop app for AI news aggregation and learning"
authors = ["AI Daily Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "process-all", "dialog-all", "fs-all", "shell-open", "notification-all", "os-all", "path-all", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Optimize for size and performance
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
